@@ -15,6 +15,8 @@ Plans for 0.7.0
     [D] Fixed error opening file if no locale encoding set (bug #6319)
     [D] Catch OSError in case saving file fails and temporary backup copy is
         restored (bug #6316)
+    [D] Fixed error launching preview if no column focused
+    [D] Improved blank line handling of subtitle merge
 
 
 Plans after 0.7.0
